--- a/TextBoxX/TextBoxX.vbproj
+++ b/TextBoxX/TextBoxX.vbproj
@@ -121,6 +121,9 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="TextBoxX.resx">
+      <DependentUpon>TextBoxX.vb</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="My Project\Application.myapp">
